# pypltagent-eth

./: .gitignore  Makefile  README.md  command_handler.py  custom_http_handler.py  ipv6server.py  pypltagent-eth.py  pyproject.toml  requirements-dev.txt  test_server.py  upload_handler.py
.github/workflows/: ci.yml
debian/: control  postinst  prerm  pypltagent.service
src/pypltagent/: command_handler.py  custom_http_handler.py  pypltagent-eth.py  upload_handler.py
src/pypltagent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_server.py
