[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypltagent"
version = "0.1.0"
description = "An agent package allowing PLT to control an SBC/PC over Ethernet"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Blue Clover", email = "support@bcdevices.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [ ]
